--- a/style.css
+++ b/style.css
@@ -4,11 +4,27 @@ p {
 }
 
 body{
-  background-color: #00b2ee;
+  background-color: yellow;
   text-align: center;
 }
 
 .hidden-links{
   text-decoration: none;
   color: white;
+  
+@media screen and (min-width: 400px) and (max-width: 800px) {
+    body{
+      background-color:green;
+  }
+}
+@media screen and (min-width: 800px) and (max-width: 1000px) {
+    body{
+      background-color:blue;
+  }
+}
+  
+@media screen and (min-width: 1000px) {
+    body{
+      background-color:red;
+  }
 }
