--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 .hidden-links{
   text-decoration: none;
   color: white;
+}
   
 @media screen and (min-width: 400px) and (max-width: 800px) {
     body{
